--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="cap_sensitive">! Cap Sensitive</string>
     <string name="forgot_password">Forgot password ?</string>
     <string name="login">Login</string>
+    <string name="don_t_have_account_yet">Don\'t have account yet ?</string>
 </resources>
