--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="forgot_password">Forgot password ?</string>
     <string name="login">Login</string>
     <string name="don_t_have_account_yet">Don\'t have account yet ?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="staff_sign_up">Staff Sign Up</string>
+    <string name="staff_email">Staff Email</string>
+    <string name="already_have_account">Already have account.</string>
 </resources>
